--- a/src/styles/nextGenAIHero.css
+++ b/src/styles/nextGenAIHero.css
@@ -84,15 +84,15 @@
 }
 
 .code-keyword {
-  color: #f472b6;
+  color: #10b981;
 }
 
 .code-function {
-  color: #60a5fa;
+  color: #10b981;
 }
 
 .code-property {
-  color: #a5b4fc;
+  color: #6ee7b7;
   margin-left: 0.5rem;
 }
 
